--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
 
     <title>Animated Icons</title>
+
+    <style>
+        #chain{
+
+            font-size: 50px; 
+
+        }
+
+    </style>
 </head>
 <body>
     
+    <!-- ADDING AN ICON -->
+    <div id="chain" class="fa-solid fa-link"></div>
+
 </body>
 </html>
