Displayed Hourglass icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Animated Icons</title>
 
     <style>
-        #chain, #battery{
+        #chain, #battery, #hourglass{
 
             font-size: 50px; 
 
@@ -26,6 +26,10 @@
     <br><br>
 
     <div id="battery" class="fa"></div>
+
+    <br><br>
+
+    <div id="hourglass" class="fa"></div>
 
 
 
@@ -59,7 +63,10 @@
      </script>
 
      <!-- LOAD BATTERY ANIMATION -->
-     <script src="main.js"></script>
+     <script src="battery.js"></script>
+
+      <!-- LOAD HOURGLASS ANIMATION -->
+      <script src="hourglass.js"></script>
 
 </body>
 </html>
